SF-2307 SF-2308 Fix scripture audio play button and RTL skip buttons
- The buttom of the play/pause button was partially hidden underneath
the slider, which was not visually apparent, but caused some clicks to
go to the slider when the user would expect the audio to play/pause.
- The skip forward/backward buttons were inverted in RTL mode (i.e.,
they did not match the direction of the slider).
- The reference of the verse being played has been moved from below the
slider, to above the slider.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-scripture-audio-player/checking-scripture-audio-player.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-scripture-audio-player/checking-scripture-audio-player.component.scss
@@ -3,25 +3,20 @@
   flex-direction: column;
 }
 
-.audio-action-buttons {
-  display: flex;
-  justify-content: center;
+.main-row {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+}
+
+.close-button {
+  justify-self: end;
 }
 
 .verse-label {
   padding: 8px;
   font-weight: 500;
   font-size: 0.9em;
-}
-
-div[dir='ltr'] .close-button {
-  position: absolute;
-  right: 8px;
-}
-
-div[dir='rtl'] .close-button {
-  position: absolute;
-  left: 8px;
 }
 
 .previous-ref-button,
@@ -31,8 +26,4 @@ div[dir='rtl'] .close-button {
 
 .play-pause-button mat-icon {
   transform: scale(1.9);
-}
-
-app-audio-player {
-  margin: -10px 0;
 }
